Removed migrations from this source tree, as it has been moved to a sub-project.